# polymarketlp

./: .env.example  README.md  pyproject.toml  requirements.txt  suggestions.txt
.githooks/: commit-msg
.github/workflows/: rewards-scan.yml
src/polymarket_rewards/: __init__.py  cli.py  client.py  engine.py  market_time.py  notify.py  order_manager.py  position_regime.py  risk.py  scanner.py  scorer.py  trader.py  ws_monitor.py
src/polymarket_rewards/news/: __init__.py  aggregator.py  events.py  fetcher.py  keywords.py  mapper.py  models.py  ranker.py  service.py
src/polymarket_rewards/news/feeds/: __init__.py  currents.py  finnhub.py  gnews.py  google_rss.py  newsapi.py
tests/: test_news_ranker.py  test_position_regime.py  test_risk.py  test_scorer.py
